use npm replacing pnpm for easier azure deployment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,23 +15,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v6
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: false
-
       - name: Install Node.js
         uses: actions/setup-node@v6
         with:
           node-version: 25
-          cache: 'pnpm'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci
 
       - name: Run Build
-        run: pnpm build:full
+        run: npm run build:full
 
       - name: Deploy dist to branch
         env:
