--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     },
     "type": "module",
     "scripts": {
-        "start": "pnpm build:full && pnpm serve",
-        "dev": "concurrently \"tsx noname-server.cts --debug\" \"pnpm vite dev --open\"",
+        "start": "npm run build:full && npm run serve",
+        "dev": "concurrently \"tsx noname-server.cts --debug\" \"npm run vite -- dev --open\"",
         "serve": "cd dist && node noname-server.cjs",
         "build": "tsx scripts/build.ts",
         "build:types": "tsc -p tsconfig.types.json",
         "build:full": "tsx scripts/build.ts --mode full",
         "build:diff": "tsx scripts/build.ts --mode diff",
-        "lint": "pnpm eslint ."
+        "lint": "eslint .",
+        "vite": "vite"
     },
     "dependencies": {
         "@codemirror/autocomplete": "^6.20.0",
