--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build:types": "tsc -p tsconfig.types.json",
         "build:full": "tsx scripts/build.ts --mode full",
         "build:diff": "tsx scripts/build.ts --mode diff",
+        "build:pwa-icons": "node scripts/generate-pwa-icons.js",
         "lint": "eslint .",
         "vite": "vite"
     },
@@ -82,6 +83,7 @@
         "glob": "^13.0.0",
         "globals": "^16.5.0",
         "prettier": "^3.7.4",
+        "sharp": "^0.34.5",
         "tsx": "^4.21.0",
         "typescript-eslint": "^8.50.0",
         "vite": "^7.3.0",
