Add SSL support for secure WebSocket connections and update README for development instructions

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "scripts": {
         "start": "npm run build:full && npm run serve",
         "dev": "concurrently \"tsx noname-server.cts --debug\" \"npm run vite -- dev --open\" \"npm run server\"",
+        "dev:ssl": "concurrently \"tsx noname-server.cts --debug\" \"USE_SSL=true npm run vite -- dev --open\" \"npm run server:ssl\"",
         "serve": "concurrently \"cd dist && node noname-server.cjs\" \"npm run server\"",
+        "serve:ssl": "concurrently \"cd dist && node noname-server.cjs\" \"npm run server:ssl\"",
         "server": "node scripts/server.cjs",
+        "server:ssl": "USE_SSL=true node scripts/server.cjs",
+        "ssl:generate": "mkdir -p ssl && openssl req -x509 -newkey rsa:4096 -keyout ssl/key.pem -out ssl/cert.pem -days 365 -nodes -subj '/CN=localhost'",
         "build": "tsx scripts/build.ts",
         "build:types": "tsc -p tsconfig.types.json",
         "build:full": "tsx scripts/build.ts --mode full",
