Refactor server and client configurations for improved port management and WebSocket integration
- Updated README.md to reflect changes in server ports and commands for starting the application.
- Modified docker-compose.yml to set environment variables and restart policies for the app container.
- Removed outdated how-to-start.md documentation file.
- Enhanced noname-server.cts to integrate WebSocket server with HTTP/HTTPS server, allowing for unified port usage.
- Adjusted game client code to dynamically use the current port for WebSocket connections instead of hardcoded values.
- Updated library index.js to automatically detect the correct WebSocket protocol and port based on the current environment.
- Revised package.json scripts to streamline server startup commands and ensure compatibility with new configurations.
- Deleted legacy server management script (scripts/server.cjs) as functionality is now integrated into noname-server.cts.
- Updated vite.config.ts to define separate ports for the Vite client and the noname server.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,62 @@
+# Dependencies
 node_modules
-dist
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs (dist is needed in builder stage but excluded for context)
 output
+*.log
+
+# Git
 .git
+.gitignore
+
+# Docker files
 Dockerfile
 .dockerignore
+docker-compose.yml
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
+test/
+tests/
+*.test.js
+*.spec.js
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# SSL certificates (can be generated or mounted separately)
+# ssl/
+
+# Local development files
+*.local.js
+*.local.ts
+.eslintcache
+
+# Documentation (to reduce image size)
+# docs/
+README.md
+LICENSE
+CODE_OF_CONDUCT.md
+CONTRIBUTING.md
