--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     },
     "type": "module",
     "scripts": {
-        "start": "npm run build:full && npm run serve",
-        "dev": "concurrently \"tsx noname-server.cts --debug\" \"npm run vite -- dev --open\" \"npm run server\"",
-        "dev:ssl": "concurrently \"tsx noname-server.cts --debug\" \"USE_SSL=true npm run vite -- dev --open\" \"npm run server:ssl\"",
-        "serve": "concurrently \"cd dist && node noname-server.cjs\" \"npm run server\"",
-        "serve:ssl": "concurrently \"cd dist && node noname-server.cjs --https --port 8089 --sslDir ../ssl\" \"npm run server:ssl\"",
-        "server": "node scripts/server.cjs",
-        "server:ssl": "USE_SSL=true node scripts/server.cjs",
+        "start": "npm run build:full && npm run server",
+        "dev": "concurrently \"tsx noname-server.cts --debug --port 8088\" \"npm run vite -- dev --open\"",
+        "dev:ssl": "concurrently \"tsx noname-server.cts --debug --port 8088 --https --sslDir ssl\" \"USE_SSL=true npm run vite -- dev --open\"",
+        "server": "npm run build:full && cd dist && node noname-server.cjs --server",
+        "server:ssl": "npm run build:full && cd dist && node noname-server.cjs --https --sslDir ../ssl --server",
         "ssl:generate": "mkdir -p ssl && openssl req -x509 -newkey rsa:4096 -keyout ssl/key.pem -out ssl/cert.pem -days 365 -nodes -subj '/CN=localhost'",
         "build": "tsx scripts/build.ts",
         "build:types": "tsc -p tsconfig.types.json",
