Update Azure deployment workflow to prepare and use a deployment package

--- a/.github/workflows/azure-webapp.yml
+++ b/.github/workflows/azure-webapp.yml
@@ -29,9 +29,14 @@ jobs:
       - name: Build application
         run: npm run build:full
 
+      - name: Prepare deployment package
+        run: |
+          mkdir -p deploy/dist
+          cp -r dist/* deploy/dist/
+          
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}  # Set this in your GitHub repository secrets
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # Set this in your GitHub repository secrets
-          package: ./dist
+          package: ./deploy
