refactor: update ESLint configuration for TypeScript and Vue files, improve rule management
fix: change variable declarations from let to const for better immutability

refactor: update service worker registration logic to use const for registrations

chore: modify web app manifest display mode and color scheme

fix: adjust audio parsing to correctly handle audioNum extraction

refactor: use const for color parsing in default hooks

fix: update error handling to use const for distance and rawSourceMap

refactor: change variable declarations in utility functions to const

chore: add script for generating PWA icons to package.json

chore: update PWA icons with new designs

style: modify SVG icon dimensions and fill color for better visibility

chore: exclude scripts directory in TypeScript configuration

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "build:full": "tsx scripts/build.ts --mode full",
         "build:diff": "tsx scripts/build.ts --mode diff",
         "build:pwa-icons": "node scripts/generate-pwa-icons.js",
+        "generate:icons": "node scripts/generate-pwa-icons.js",
         "lint": "eslint .",
         "vite": "vite"
     },
