--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	// "include": ["noname"],
-	"exclude": ["dist", "node_modules", "extension"],
+	"exclude": ["dist", "node_modules", "extension", "scripts"],
 	"compilerOptions": {
 		"target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
 		"lib": ["dom", "WebWorker", "ESNext"],
