feat: add Vite plugin to generate manifest.webmanifest for GitHub Pages

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Build client web app for GitHub Pages
         run: npm run build:full
+        env:
+          GITHUB_PAGES: true
 
       - name: Remove docs folder from dist
         run: |
